# pydeal_line_length

./: .gitignore  LICENSE  README.md  pyproject.toml
pydeal_line_length/: __init__.py  checker.py
